AndroidPermit usage demonstration by hijacking google's sample project
- build.gradle: updated support lib; added vanilla-android, retrolambda
- manifest: replaced deprecated tag
- MainActivity: added reset_permissions menu item; replaced permission
  stuff with AndroidPermit

--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
 
     <!-- The following permissions are only requested if the device is on M or above.
      On older platforms these permissions are not requested and will not be available. -->
-    <uses-permission-sdk-m android:name="android.permission.READ_CONTACTS" />
-    <uses-permission-sdk-m android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission-sdk-23 android:name="android.permission.READ_CONTACTS" />
+    <uses-permission-sdk-23 android:name="android.permission.WRITE_CONTACTS" />
 
     <!-- END_INCLUDE(manifest) -->
 
