--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -9,6 +9,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'me.tatarka.retrolambda' version '3.6.0'
+}
+
 apply plugin: 'com.android.application'
 
 repositories {
@@ -16,12 +20,13 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:25.0.1"
-    compile "com.android.support:support-v13:25.0.1"
-    compile "com.android.support:cardview-v7:25.0.1"
-    compile "com.android.support:appcompat-v7:25.0.1"
-    compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.android.support:design:24.0.0'
+    compile "com.android.support:support-v4:25.3.0"
+    compile "com.android.support:support-v13:25.3.0"
+    compile "com.android.support:cardview-v7:25.3.0"
+    compile "com.android.support:appcompat-v7:25.3.0"
+    compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.android.support:design:25.3.0'
+    compile 'ph.codeia.vanilla:vanilla-android:0.3.2'
 }
 
 // The sample build uses multiple directories to
@@ -42,8 +47,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     sourceSets {
